<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".ui.widget.SpinnerDateTimeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_date_time"
        android:layout_gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:id="@+id/tvSpinnerDateTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jurusan"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:id="@+id/tvJurusan" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:id="@+id/spinnerJurusan" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tanggal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/tvTanggal"
        app:drawableEndCompat="@drawable/ic_calender"
        android:background="#4FE22C"
        app:drawableTint="#FFE700" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Waktu"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/tvTime"
        app:drawableEndCompat="@drawable/ic_time"
        android:background="#4FE22C"
        app:drawableTint="#FFE700" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Simpan"
        android:id="@+id/btnSimpan"
        android:layout_gravity="center"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvHasil" />

</LinearLayout>

